--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             </div>            
             <nav>
                 <ul>
-                    <li><a href="victorialaguerre.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li class="dropdown">
                         <a href="engineering.html">Engineering</a>
                         <div class="dropdown-content">
