--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             </svg>
             <div class="hero-content">
                 <h2 class="hero-question">Who is</h2>
-                <h1 class="hero-name">Victoria</h1>
+                <h1 class="hero-name">Victoria Laguerre</h1>
                 <h2 class="hero-question">designing for?</h2>
             </div>
             <div class="scroll-arrow" onclick="scrollToBottom()">
