--- a/about.html
+++ b/about.html
@@ -472,7 +472,7 @@
     <div id="get-in-touch" class="get-in-touch">
         <h2>Message me!</h2>
         <form class="contact-form" action="https://formsubmit.co/victorialaguerre2026@u.northwestern.edu" method="POST">
-            <input type="hidden" name="_next" value="http://127.0.0.1:5500/thank-you.html">
+            <input type="hidden" name="_next" value="https://vicky-laguerre-online-portfolio.vercel.app/thank-you.html>
             <input type="hidden" name="_subject" value="New portfolio contact form submission">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
