--- a/design.html
+++ b/design.html
@@ -341,7 +341,7 @@
             </div>
             <div class="category">
                 <a href="cocktail-bar.html">
-                    <img src="/cocktail-bar.jpg" alt="Cocktail Bar Design">
+                    <img src="/finished bar.png" alt="Cocktail Bar Design">
                     <div class="category-content">
                         <h3>Cocktail Bar</h3>
                         <p>Innovative cocktail bar concept blending modern aesthetics with functional design, optimizing workflow and customer experience.</p>
@@ -351,7 +351,7 @@
             </div>
             <div class="category">
                 <a href="rendering.html">
-                    <img src="/rendering.jpg" alt="Product Rendering Project">
+                    <img src="/headphones.png" alt="Product Rendering Project">
                     <div class="category-content">
                         <h3>Product Rendering</h3>
                         <p>Photorealistic 3D visualizations of consumer electronics, showcasing skills in 3D modeling, texturing, and lighting design.</p>
