--- a/cocktail-bar.html
+++ b/cocktail-bar.html
@@ -366,14 +366,12 @@
 
         <div class="gallery-row">
             <div class="gallery-item">
-                <video controls autoplay loop muted>
+                <video width="100%" controls>
                     <source src="video of bar.MP4" type="video/mp4">
-                    Your browser does not support the video tag.
                 </video>
                 <p class="image-caption">Video of the final design.</p>
             </div>
         </div>
-    </div>
 
     <div class="skills-section">
         <h2>Skills Utilized</h2>
