--- a/design.html
+++ b/design.html
@@ -341,7 +341,7 @@
             </div>
             <div class="category">
                 <a href="cocktail-bar.html">
-                    <img src="/finished bar.png" alt="Cocktail Bar Design">
+                    <img src="/bar cad.png" alt="Cocktail Bar Design">
                     <div class="category-content">
                         <h3>Cocktail Bar</h3>
                         <p>Innovative cocktail bar concept blending modern aesthetics with functional design, optimizing workflow and customer experience.</p>
