--- a/cocktail-bar.html
+++ b/cocktail-bar.html
@@ -360,7 +360,7 @@
     
         <div class="gallery-row">
             <div class="gallery-item">
-                <img src="./countertop.png" alt="Stained top with engraved 4L logo">
+                <img src="./bar-category.jpg" alt="Stained top with engraved 4L logo">
                 <p class="image-caption">Stained top with engraved 4L logo.</p>
             </div>
         </div>
