--- a/cocktail-bar.html
+++ b/cocktail-bar.html
@@ -368,7 +368,7 @@
         <div class="gallery-row">
             <div class="gallery-item">
                 <video controls>
-                    <source src="./.video of bar.MP4.icloud" type="video/mp4">
+                    <source src="./video of bar.MP4" type="video/mp4">
                 </video>
                 <p class="image-caption">Video of the Final Design</p>
             </div>
