--- a/puppet-theater.html
+++ b/puppet-theater.html
@@ -303,7 +303,7 @@
                     <p>As a Manufacturing and Design Intern at Northwestern University's Segal Design Institute, I had the opportunity to work on an exciting project to create an interactive puppet theater for children. This project aimed to foster imagination, creativity, and social development in young learners.</p>
                 </div>
                 <div class="project-image">
-                    <img src="puppet theater concept.png" alt="Puppet Theater Concept">
+                    <img src="final puppet theater.jpeg" alt="Puppet Theater Concept">
                     <p class="image-caption">Initial concept sketch of the puppet theater</p>
                 </div>
             </div>
