--- a/formula-one.html
+++ b/formula-one.html
@@ -304,11 +304,11 @@
             <div class="project-section">
                 <div class="project-text">
                     <h2>Project Overview</h2>
-                    <p>As a member of the Northwestern University Formula One Racing team, I've been involved in the exciting process of creating an electric vehicle for competition.</p>
+                    <p>As a member of the Northwestern University Formula One Racing team, specifically on the powertrain subteam, I was tasked with designing and manufacturing the differential sprocket adapter. This critical component connects the drive sprocket to the differential, effectively transferring power from the engine through the chain drive system to the wheels. The adapter needed to be precisely engineered to handle high torque loads while maintaining perfect alignment with both the sprocket and differential to ensure optimal performance during racing conditions.</p>
                 </div>
                 <div class="project-image">
-                    <img src="the car.png" alt="Northwestern Formula One Racing Car">
-                    <p class="image-caption">Our Formula One Racing Car</p>
+                    <img src="DSA.jpeg" alt="Northwestern Formula One Racing Car">
+                    <p class="image-caption">Differential Sprocket Adapter</p>
                 </div>
             </div>
             
@@ -349,18 +349,11 @@
             <div class="project-section">
                 <div class="project-text">
                     <h2>Implementation</h2>
-                    <p>During this phase, my team members and I refined and tested the differential sprocket adapter to ensure seamless integration with the powertrain and troubleshooted alignment and fitment issues on the vehicle. Each step, from adjusting design tolerances to on-site modifications, underscored the importance of adaptability and teamwork in engineering.</p>
+                    <p>When it came to installation, my team members and I refined and tested the differential sprocket adapter to ensure seamless integration with the powertrain and troubleshooted alignment and fitment issues on the vehicle. Each step, from adjusting design tolerances to on-site modifications, underscored the importance of adaptability and teamwork in engineering.</p>
                 </div>
                 <div class="project-image">
                     <img src="implementation.png" alt="Northwestern Formula One Racing Team">
                     <p class="image-caption">DSA installed in the vehicle</p>
-                </div>
-            </div>
-            
-            <div class="project-section">
-                <div class="project-text">
-                    <h2>Project Duration</h2>
-                    <p>September 2022 - June 2023</p>
                 </div>
             </div>
         </div>
