--- a/puppet-theater.html
+++ b/puppet-theater.html
@@ -410,32 +410,34 @@
         </div>
 
         <div class="skills-section">
-            <h2>Skills Utilized</h2>
-            <div class="skills-list">
-                <span class="skill-tag">Computer-Aided Design (CAD)</span>
-                <span class="skill-tag">Computer-Aided Manufacturing (CAM)</span>
-                <span class="skill-tag">Woodworking</span>
-                <span class="skill-tag">Project Management</span>
-                <span class="skill-tag">Design Thinking</span>
-                <span class="skill-tag">3D Modeling</span>
-                <span class="skill-tag">Rapid Prototyping</span>
-                <span class="skill-tag">Technical Documentation</span>
-                <span class="skill-tag">User Research</span>
+                <h2>Skills Utilized</h2>
+                <div class="skills-list">
+                    <span class="skill-tag">SolidWorks</span>
+                    <span class="skill-tag">Fusion 360</span>
+                    <span class="skill-tag">CNC Machining</span>
+                    <span class="skill-tag">Finite Element Analysis</span>
+                    <span class="skill-tag">CAD/CAM</span>
+                    <span class="skill-tag">Mechanical Design</span>
+                    <span class="skill-tag">Design Optimization</span>
+                    <span class="skill-tag">Technical Documentation</span>
+                    <span class="skill-tag">Problem Solving</span>
+                </div>
             </div>
         </div>
+    </div>
 
-        <div class="navigation-buttons">
-            <button onclick="window.location.href='engineering.html'">Back to Engineering Page</button>
+    <div class="navigation-buttons">
+        <button onclick="window.location.href='engineering.html'">Back to Engineering Page</button>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 by Victoria Laguerre</p>
+        <div class="footer-icons">
+            <a href="about.html#get-in-touch" title="Email"><i class="fas fa-envelope"></i></a>
+            <a href="tel:6316525352" title="Phone"><i class="fas fa-phone"></i></a>
+            <a href="https://www.linkedin.com/in/victorialaguerre/" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="Victoria Laguerre - Resume.pdf" target="_blank" title="Resume"><i class="fas fa-file-alt"></i></a>
         </div>
-
-        <footer>
-            <p>&copy; 2024 by Victoria Laguerre</p>
-            <div class="footer-icons">
-                <a href="about.html#get-in-touch" title="Email"><i class="fas fa-envelope"></i></a>
-                <a href="tel:6316525352" title="Phone"><i class="fas fa-phone"></i></a>
-                <a href="https://www.linkedin.com/in/victorialaguerre/" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="Victoria Laguerre - Resume.pdf" target="_blank" title="Resume"><i class="fas fa-file-alt"></i></a>
-            </div>
-        </footer>
-    </body>
+    </footer>
+</body>
 </html>
