--- a/puppet-theater.html
+++ b/puppet-theater.html
@@ -102,6 +102,9 @@
             margin: 0 auto;
             padding: 50px 20px;
             cursor: default;
+            display: flex;
+            flex-direction: column;
+            gap: 60px;
         }
         
         .project-details {
@@ -109,6 +112,7 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             padding: 30px;
+            margin-bottom: 0;
         }
         
         .project-details h2 {
@@ -172,7 +176,7 @@
         /* Skills section styling */
         .skills-section {
             max-width: 800px;
-            margin: 50px auto;
+            margin: 0 auto; /* Remove top/bottom margins as spacing is handled by content gap */
             padding: 30px 30px;
             text-align: center;
             background-color: #f8f9fa;
@@ -246,7 +250,8 @@
             display: flex;
             justify-content: center;
             gap: 20px;
-            margin: 40px 0;
+            margin-top: 0; /* Remove top margin as spacing is handled by content gap */
+            margin-bottom: 40px;
         }
 
         .navigation-buttons button {
