--- a/rendering.html
+++ b/rendering.html
@@ -312,7 +312,7 @@
                 <img src="/headphones.png" alt="Headphones Product Render">
             </div>
             <div class="project-text">
-                <h3>Headphones Render: Material Detailing and Color Variations</h3>
+                <h3>Headphones: Material Detailing and Color Variations</h3>
                 <p>This render highlights a set of high-fidelity headphones with a focus on material and texture detailing. Each component, from the mesh padding to the metal accents, was meticulously crafted to reflect the quality and feel of the product. Different color schemes were applied to show potential options, enhancing the marketing appeal and giving a comprehensive view of the product's versatility.</p>
             </div>
         </div>
@@ -322,7 +322,7 @@
                 <img src="/toothbrush.png" alt="Toothbrush Product Render">
             </div>
             <div class="project-text">
-                <h3>Toothbrush Set Render: Color and Texture Variation</h3>
+                <h3>Toothbrush Set: Color and Texture Variation</h3>
                 <p>This render showcases a set of eco-friendly toothbrushes, each with distinct color options for the bristles. The bamboo texture of the handles was designed to evoke a natural feel, reflecting the sustainable materials used in the product. This visual emphasizes variety in color and environmentally conscious design, catering to a market interested in sustainable options.</p>
             </div>
         </div>
@@ -332,7 +332,7 @@
                 <img src="/chair.png" alt="Chair Product Render">
             </div>
             <div class="project-text">
-                <h3>Modern Rocking Chair Render: Form and Finish</h3>
+                <h3>Modern Rocking Chair: Form and Finish</h3>
                 <p>This render features a modern rocking chair with a sleek, minimalist aesthetic. The chair's leather seat and wooden rockers were rendered with attention to texture and finish, showcasing the contrast between smooth metal and organic materials. Lighting and composition were carefully chosen to highlight the contours and ergonomic design, appealing to a contemporary furniture market.</p>
             </div>
         </div>
