--- a/about.html
+++ b/about.html
@@ -338,6 +338,9 @@
             display: none;
         }
     </style>
+    
+    <link rel="stylesheet" href="mobile-styles.css">
+    <script src="mobile-menu.js" defer></script>
 </head>
 <body>
     <div class="fullscreen-hero">
