--- a/achievement-gap.html
+++ b/achievement-gap.html
@@ -289,6 +289,9 @@
             outline: none;
         }
     </style>
+    
+    <link rel="stylesheet" href="mobile-styles.css">
+    <script src="mobile-menu.js" defer></script>
 </head>
 <body>
     <header>
