--- a/cocktail-bar.html
+++ b/cocktail-bar.html
@@ -288,6 +288,9 @@
             outline: none;
         }
     </style>
+    
+    <link rel="stylesheet" href="mobile-styles.css">
+    <script src="mobile-menu.js" defer></script>
 </head>
 <body>
     <header>
