--- a/design.html
+++ b/design.html
@@ -279,6 +279,9 @@
             opacity: 0.7;
         }
     </style>
+    
+    <link rel="stylesheet" href="mobile-styles.css">
+    <script src="mobile-menu.js" defer></script>
 </head>
 <body>
     <div class="fullscreen-hero">
