--- a/formula-one.html
+++ b/formula-one.html
@@ -307,6 +307,9 @@
             font-weight: 400;
         }
     </style>
+
+    <link rel="stylesheet" href="mobile-styles.css">
+    <script src="mobile-menu.js" defer></script>
 </head>
 <body>
     <header>
