--- a/longboard.html
+++ b/longboard.html
@@ -305,6 +305,9 @@
             outline: none;
         }
     </style>
+
+    <link rel="stylesheet" href="mobile-styles.css">
+    <script src="mobile-menu.js" defer></script>
 </head>
 <body>
     <header>
