--- a/puppet-theater.html
+++ b/puppet-theater.html
@@ -305,6 +305,9 @@
             transform: scale(1.2);
         }
     </style>
+
+    <link rel="stylesheet" href="mobile-styles.css">
+    <script src="mobile-menu.js" defer></script>
 </head>
 <body>
     <header>
