--- a/rendering.html
+++ b/rendering.html
@@ -262,6 +262,9 @@
             }
         }
     </style>
+
+    <link rel="stylesheet" href="mobile-styles.css">
+    <script src="mobile-menu.js" defer></script>
 </head>
 <body>
     <header>
