--- a/thank-you.html
+++ b/thank-you.html
@@ -132,6 +132,9 @@
             display: block;
         }
     </style>
+
+    <link rel="stylesheet" href="mobile-styles.css">
+    <script src="mobile-menu.js" defer></script>
 </head>
 <body>
     <div class="fullscreen-hero">
