--- a/about.html
+++ b/about.html
@@ -329,7 +329,14 @@
                         <!-- SVG path removed for brevity -->
                     </svg>
                 </a>
-            </div>            
+            </div> 
+
+            <button class="mobile-menu-button" aria-label="Toggle mobile menu">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
+            
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
