--- a/achievement-gap.html
+++ b/achievement-gap.html
@@ -381,7 +381,7 @@
                     <p>As part of the Design, Thinking, and Communication Course at Northwestern University, I led a team project aimed at addressing the achievement gap between white students and students of color in Evanston and the surrounding Chicagoland area.</p>
                 </div>
                 <div class="project-image">
-                    <img src="opportunity gap.jpg" alt="Project team meeting">
+                    <img src="maxmatch storyboard.png" alt="Project team meeting">
                     <p class="image-caption">The Achievement Gap</p>
                 </div>
             </div>
