--- a/puppet-theater.html
+++ b/puppet-theater.html
@@ -384,7 +384,13 @@
             <div class="project-section">
                 <div class="project-text">
                     <h2>CAD Design & Rendering</h2>
-                    <p>The project demanded a meticulous approach to design, combining both digital and traditional manufacturing methods. Using computer-aided design software, I created detailed 3D models of every component, ensuring precise measurements and optimal assembly configuration. This digital approach allowed us to visualize the entire structure before production and make critical adjustments to improve stability and functionality. Special attention was given to designing child-safe joints and connections, leading to innovative solutions like finger joints and dowel assemblies that eliminated the need for metal fasteners.</p>
+                    <ul>
+                        <li>Created detailed 3D models of every component using computer-aided design (CAD) software.</li>
+                        <li>Ensured precise measurements and optimal assembly configurations through digital modeling.</li>
+                        <li>Allowed for full visualization of the structure before production, enabling critical adjustments to enhance stability and functionality.</li>
+                        <li>Focused on child-safe joints and connections, incorporating innovative solutions like finger joints and dowel assemblies.</li>
+                        <li>Eliminated the need for metal fasteners, prioritizing safety and functionality.</li>
+                    </ul>
                 </div>
                 <div class="project-image">
                     <img src="puppet theater cad.png" alt="CAD Model of Puppet Theater">
@@ -395,7 +401,13 @@
             <div class="project-section">
                 <div class="project-text">
                     <h2>Manufacturing & Assembly</h2>
-                    <p>The manufacturing phase brought our digital designs to life through a combination of computer-aided manufacturing and traditional woodworking techniques. Each component was carefully cut and shaped using CNC machinery, ensuring consistency and precision across all parts. The assembly process required careful attention to detail, particularly in the joining of components where we utilized wood glue and dowels to create strong, permanent connections. This hands-on phase allowed us to refine our approach in real-time, making subtle adjustments to improve the structure's stability and ease of use. Throughout the process, we maintained a strong focus on safety and durability, ensuring that the final product would withstand regular use while remaining completely safe for children.</p>
+                    <ul>
+                        <li>The manufacturing phase transformed digital designs into physical components using a combination of computer-aided manufacturing and traditional woodworking techniques.</li>
+                        <li>CNC machinery was used to cut and shape components, ensuring precision and consistency.</li>
+                        <li>Assembly involved careful attention to detail, with wood glue and dowels used to create strong, permanent connections.</li>
+                        <li>Real-time refinements during the hands-on process improved the structure's stability and ease of use.</li>
+                        <li>Safety and durability were prioritized throughout, ensuring the final product could withstand regular use and remain safe for children.</li>
+                    </ul>
                 </div>
                 <div class="project-image">
                     <img src="puppet theater assembly.JPG" alt="Puppet Theater Assembly">
@@ -406,7 +418,15 @@
             <div class="project-section">
                 <div class="project-text">
                     <h2>Project Outcome</h2>
-                    <p>The completed puppet theater project succeeded in creating a meaningful impact for children visiting the Cook County Department of Corrections. Beyond just a simple play structure, we delivered a versatile, six-module interactive system that serves as a bridge for connection between children and their loved ones. The modular design allows for multiple configuration options, keeping the experience fresh and engaging with each visit. The sturdy construction, child-safe materials, and thoughtful integration of various play elements have made it a valuable addition to the facility's visiting area. Most importantly, the theater has achieved its primary goal of fostering positive interactions and creating memorable experiences for families during their time together, helping to maintain and strengthen these important relationships through creative play and storytelling.</p>
+                    <ul>
+                        <li>The Puppet Theater project created a meaningful impact for children visiting the Cook County Department of Corrections.</li>
+                        <li>Delivered a versatile, six-module interactive system designed as more than just a play structure.</li>
+                        <li>Functions as a bridge for connection between children and their loved ones.</li>
+                        <li>Modular design allows for multiple configuration options, keeping the experience fresh and engaging.</li>
+                        <li>Features sturdy construction, child-safe materials, and thoughtfully integrated play elements.</li>
+                        <li>Provides a valuable addition to the facility’s visiting area.</li>
+                        <li>Achieved its primary goal of strengthening important relationships through creative play and storytelling.</li>
+                    </ul>
                 </div>
                 <div class="project-image">
                     <img src="puppet team.jpeg" alt="Final Puppet Theater">
