--- a/rendering.html
+++ b/rendering.html
@@ -300,6 +300,7 @@
 
     <div class="project-title">
         <h1>Product Rendering</h1>
+        <h2>designed for me</h2>
     </div>
     
     <div class="container">
