--- a/rendering.html
+++ b/rendering.html
@@ -110,6 +110,14 @@
             font-size: 3em;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
+
+        .project-title h2 {
+            font-size: 1.2em; /* Smaller font size */
+            margin-top: 10px; /* Spacing between title and subtitle */
+            color: #ffffff;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+            font-weight: 300;
+        }
         
         .container {
             max-width: 1200px;
