--- a/achievement-gap.html
+++ b/achievement-gap.html
@@ -397,7 +397,7 @@
                     <p>This comprehensive approach to data collection enabled our matching algorithm to consider multiple dimensions of compatibility, going beyond just academic fit to include personal, social, and emotional factors that could impact the success of tutoring relationships.</p>        
                 </div>
                 <div class="project-image">
-                    <img src="questionnaires.png" alt="Survey design process">
+                    <img src="questionnaire results.png" alt="Survey design process">
                     <p class="image-caption">Mentee and mentor questionnaires</p>
                 </div>
             </div>
@@ -415,7 +415,7 @@
                     </ul>
                 </div>
                 <div class="project-image">
-                    <img src="matlab code.png" alt="Matlab code snippet">
+                    <img src="mathworks-logo.png" alt="Matlab code snippet">
                     <p class="image-caption">Matlab program for data processing</p>
                 </div>
             </div>
@@ -435,7 +435,7 @@
                 </div>
                 <div class="project-image">
                     <img src="maxmatch impact.png" alt="Students benefiting from the program">
-                    <p class="image-caption">Students benefiting from our improved tutoring matches</p>
+                    <p class="image-caption">MaxMatch Logo</p>
                 </div>
             </div>
             
