--- a/achievement-gap.html
+++ b/achievement-gap.html
@@ -416,7 +416,7 @@
                 </div>
                 <div class="project-image">
                     <img src="mathworks-logo.png" alt="Matlab code snippet">
-                    <p class="image-caption">Matlab program for data processing</p>
+                    <p class="image-caption">Snippet of Matlab Code</p>
                 </div>
             </div>
             
