--- a/achievement-gap.html
+++ b/achievement-gap.html
@@ -415,7 +415,7 @@
                     </ul>
                 </div>
                 <div class="project-image">
-                    <img src="mathworks-logo.png" alt="Matlab code snippet">
+                    <img src="matlab snippet.png" alt="Matlab code snippet">
                     <p class="image-caption">Snippet of Matlab Code</p>
                 </div>
             </div>
